# rental_management_system

./: .gitignore
backend/: .env  Cargo.toml
backend/migrations/: 20240101000000.sql
backend/src/: config.rs  error.rs  main.rs  middleware.rs  models.rs  routes.rs  state.rs
backend/src/handlers/: auth.rs
backend/src/services/: jwt.rs  password.rs  token.rs  users.rs
