[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "ipnetwork"] }
ipnetwork = "0.20"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Crypto & Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# HTTP
http = "1.0"

# Cookies
tower-cookies = "0.10"
axum-extra = { version = "0.9", features = ["cookie"] }
sha2 = "0.10.9"
